# agentic_chatbot_support

./: .gitignore  LANGGRAPH_MIGRATION.md  REACT_PATTERN.md  REACT_QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  test.py  test_llm_agent.py  test_react.py  testing.ipynb
Policy/: cancellation_policy.txt  charges_policy.txt  delivery_delay_policy.txt  payment_policy.txt  refund_policy.txt  replacement_damage_policy.txt  return_policy.txt
scripts/: visualize_graph.py
src/: main.py  utils.py
src/agent/: __init__.py  agent_graph.py  composer.py  intent_classifier.py  llm_agent.py  llm_tools.py  memory.py  nodes.py  prompts.py  state.py  validation.py
src/logs/: agent_memory.db  agent_memory_default_session.json  agent_memory_streamlit_user.json  agent_memory_test_debug.json
src/rag/: embeddings.py  ingest_policies.py  retriever.py
src/rag/data/faiss_index/: index.faiss  index.pkl
src/rag/logs/: chunks_manifest.jsonl  retrieval_logs.jsonl
src/tools/: __init__.py  inventory.json  orders.json  refunds.json  tools.py
src/ui/: streamlit_app.py
