[project]
name = "agentic-ai-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.5",
    "faiss-cpu>=1.13.0",
    "ipython>=9.7.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.4",
    "openai>=2.8.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
    "tiktoken>=0.12.0",
    "unstructured>=0.18.21",
]
